# semantic-scraper

./: Cargo.toml  README.md
examples/: urlscraper.rs
src/: lib.rs
src/plugin/: default.rs
tests/: default_html.html  integration_test.rs  no_og_title.html
